--- a/src/app.css
+++ b/src/app.css
@@ -8,17 +8,36 @@
   position: relative;
 }
 
-.fieldBlock {
+.fieldBlock,
+.nextBlock {
   width: 25px;
   height: 25px;
   border: 1px solid gray;
   position: absolute;
 }
 
-.elementBlock {
+.currentFigureBlock,
+.nextFigureBlock {
   width: 25px;
   height: 25px;
   border: 1px solid gray;
   background-color: brown;
   position: absolute;
+}
+
+.filledBlock {
+  width: 25px;
+  height: 25px;
+  border: 1px solid gray;
+  background-color: darkviolet;
+  position: absolute;
+}
+
+.nextField {
+  width: 100px;
+  height: 100px;
+  border: 1px black solid;
+  padding: 0;
+  background-color: khaki;
+  position: relative;
 }
