--- a/src/app.css
+++ b/src/app.css
@@ -8,17 +8,55 @@
   position: relative;
 }
 
-.fieldBlock {
+.fieldBlock,
+.nextBlock {
   width: 25px;
   height: 25px;
   border: 1px solid gray;
   position: absolute;
 }
 
-.elementBlock {
+.currentFigureBlock,
+.nextFigureBlock {
   width: 25px;
   height: 25px;
   border: 1px solid gray;
   background-color: brown;
   position: absolute;
+}
+
+.filledBlock {
+  width: 25px;
+  height: 25px;
+  border: 1px solid gray;
+  background-color: darkviolet;
+  position: absolute;
+}
+
+.nextField {
+  width: 100px;
+  height: 100px;
+  border: 1px black solid;
+  padding: 0;
+  background-color: khaki;
+  position: relative;
+}
+
+.gameOverDiv {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  width: 250px;
+  height: 500px;
+  margin: 20px;
+  padding: 0;
+  text-align: center;
+  vertical-align: middle;
+  background-color: rgb(0, 0, 0.9, 0.4);
+}
+
+.gameOverDiv span {
+  line-height: 500px;
+  font-size: 28px;
+  font-weight: bold;
 }
