--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,17 @@
+/******************************
+* Основная секция с полем тетриса
+******************************/
 .mainField {
   width: 250px;
   height: 500px;
   border: 1px black solid;
-  margin: 20px;
   padding: 0;
   background-color: lightgray;
-  position: relative;
+  margin: auto;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 43%;
+  left: 50%;
 }
 
 .fieldBlock,
@@ -35,33 +41,58 @@
   position: absolute;
 }
 
+.gameOverDiv,
+.pauseDiv {
+  width: 250px;
+  height: 500px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 43%;
+  left: 50%;
+  text-align: center;
+  vertical-align: middle;
+  background-color: rgb(0, 0, 0.9, 0.4);
+}
+
+.gameOverDiv span,
+.pauseDiv span {
+  line-height: 500px;
+  font-size: 28px;
+  font-weight: bold;
+  color: whitesmoke;
+}
+
+/****************************
+  Правая секция с данными
+*****************************/
+
+.rightSection {
+  top: 43%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+.levelsDiv,
+.scoreDiv {
+  font-size: 28px;
+  font-weight: bold;
+  text-align: center;
+}
+
 .nextField {
   width: 100px;
   height: 100px;
   border: 1px black solid;
   padding: 0;
   background-color: lightgray;
+  margin: auto;
   position: relative;
 }
 
-.gameOverDiv {
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  width: 250px;
-  height: 500px;
-  margin: 20px;
-  padding: 0;
-  text-align: center;
-  vertical-align: middle;
-  background-color: rgb(0, 0, 0.9, 0.4);
-}
-
-.gameOverDiv span {
-  line-height: 500px;
-  font-size: 28px;
-  font-weight: bold;
-}
+/*****************************
+  Нижняя секция с кнопками
+*****************************/
 
 .controlsSection {
   background-color: lightgrey;
@@ -73,5 +104,5 @@
   background-color: gray;
   padding: 10px;
   border-radius: 50%;
-  color: white;
+  color: whitesmoke;
 }
